# itse

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
itse/: __init__.py  app.py  dict_store.py  id_generator.py  main.py  redis.py  storage.py  store.py  users.py
itse/routes/: auth.py
itse/routes/templates/: login.html
tests/: test_itse.py  test_store.py
