[tool.poetry]
name = "itse"
version = "0.1.0"
description = ""
authors = ["Pyry Heiskanen <pyry.heiskanen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
