[tool.poetry]
name = "itse"
version = "0.1.0"
description = ""
authors = ["Pyry Heiskanen <pyry.heiskanen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"
flake8-annotations = "^2.1.0"
aredis = "^1.1.8"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.8.2"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"
pytest-asyncio = "^0.14.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
